--- a/style.css
+++ b/style.css
@@ -10,27 +10,35 @@ h1{
     }
     section{
         display: flex;
+        margin-bottom: 200px;
     }
     .half-width{
         width: 50%;
         padding-left: 3%;
+        
     }
     .half-width img{
         width: 80%;
         padding-left: 13%;
     }
     .link-button{
-        text text-decoration: none;
+        text-decoration: none;
         background:linear-gradient(to left, #33ccff 0%, #ff6600 100%);
-        padding: 10px 10px;
+        padding: 11px 11px;
         font-weight: 700;
         border-radius: 5px;
+        padding-top: 10px;
+        color: black;
         
     }
     .top{
         background-image: url(images/top-banner.png);
         background-repeat: no-repeat;
-        padding-top: 20px;
-
     }
+    .dream{
+        background-image: url(images/dream-bg.png);
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    
 }
