--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 h1{
     font-size: 55px;
 }
+h2{
+    font-size: 40px;
+}
     .orange-color{
         color: rgb(255, 145, 0);
     }
@@ -40,5 +43,30 @@ h1{
         background-repeat: no-repeat;
         background-position: right;
     }
-    
+    .experience{
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding: 30px;
+        box-shadow: 12px 30px 20px;
+        border-radius: 5%;
+    }
+    .experience-area{
+        background-image: url(images/exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+    #junior-developer{
+        border-left: 7px solid;
+        border-image:linear-gradient(blue,cyan);
+        border-image-slice: 1;
+    }
+    #web-developer{
+        border-left: 7px solid;
+        border-image:linear-gradient(rgb(248, 42, 77),rgb(233, 127, 108));
+        border-image-slice: 1; 
+    }
+    footer p{
+        text-align: center;
+    }
 }
